flaskapp-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flaskapi-deployment-jowett
  labels:
    app: flaskapi-jowett
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flaskapi-jowett
  template:
    metadata:
      labels:
        app: flaskapi-jowett
    spec:
      containers:
        - name: flaskapi-jowett
          image: jowettc/flask-api-jowett
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: flask-service-jowett
spec:
  ports:
  - port: 5000
    targetPort: 5000
    name: flask-service-jowett
  selector:
    app: flaskapi-jowett
  type: ClusterIP

# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: flask-app-service
# spec:
#   ports:
#   - port: 5000
#     targetPort: 5000
#     name: flask-app-service
#   selector:
#     app: flaskapi-jowett
#   type: ClusterIP
