elk-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  namespace: elk
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: "jowett.cnasg.net"
      http:
        paths:
          - path: /kibana/?(.*)
            pathType: Prefix
            backend:
              service:
                name: kibana
                port:
                  number: 5601
