ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: "jowett.cnasg.net"
      http:
        paths:
          - path: /api/?(.*)
            pathType: Prefix
            backend:
              service:
              
                name: flask-service-jowett
                port:
                  number: 5000
          - path: /payment/?(.*)
            pathType: Prefix
            backend:
              service:
                name: payment-service-jowett
                port:
                  number: 5000
          - path: /?
            pathType: Prefix
            backend:
              service:
                name: frontend-service-jowett
                port:
                  number: 8080
